feat(java): hide agent warning on startup ref: #33865